--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "jade": "~0.35.0",
     "socket.io": "~0.9.16",
     "express": "~3.4.4",
-    "coffee-middleware": "~0.2.1"
+    "coffee-middleware": "~0.2.1",
+    "browserify-express": "~0.1.1",
+    "coffeeify": "~0.5.2",
+    "browserify": "~2.35.1"
   },
   "engines": {
     "node": "0.10.x"
